# ots-containers

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  NETWORKING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
changelog.d/: 20260311_pr29.rst
docs/: MANUAL-OPERATIONS.md  SIDECAR-SPEC.md  TESTING.md
docs/architecture/decision-records/: adr-001.md
src/ots_containers/: __init__.py  __main__.py  assets.py  cli.py  config.py  db.py  environment_file.py  podman.py  quadlet.py  systemd.py
src/ots_containers/commands/: README.md  __init__.py  assets.py  common.py  init.py  instance.py
src/rots/: _dbus.py  assets.py  cli.py  config.py  context.py  quadlet.py  systemd.py
src/rots/commands/: db.py
src/rots/sidecar/: __init__.py  allowlist.py  commands.py  handlers.py  handlers_config.py  handlers_phased.py  handlers_rolling.py  handlers_rots.py  rabbitmq.py  socket.py
tests/: test_assets.py  test_cli.py  test_config.py  test_db.py  test_environment_file.py  test_image_build.py  test_image_reference_security.py  test_instance.py  test_podman.py  test_quadlet.py  test_systemd.py
tests/commands/: __init__.py  test_assets.py  test_env.py  test_init.py  test_instance.py
tests/commands/cloudinit/: __init__.py  test_app.py  test_templates.py
tests/commands/generate/: test_app.py
tests/integration/: test_ssh_remote.py
tests/sidecar/: __init__.py  test_allowlist.py  test_commands.py  test_handlers.py  test_handlers_config.py  test_handlers_phased.py  test_handlers_rolling.py  test_handlers_rots.py  test_rabbitmq.py  test_socket.py
(+51 files in other folders)
